# VisualRust

./: VisualRust.sln
Microsoft.VisualStudio.Project/: IDEBuildLogger.cs  ProjectNode.cs
RustLexer/: RustLexer.csproj
VisualRust/: CargoMenuHandler.cs  Guids.cs  PkgCmdID.cs  RustCompletionSource.cs  TaskMessages.cs  Utils.cs  VisualRust.csproj  VisualRust.vsct  VisualRustPackage.cs
VisualRust.Build/: Rustc.cs  VisualRust.Build.csproj
VisualRust.CargoBuild/: CargoTask.cs  CargoTaskFactory.cs  VisualRust.Cargo.targets  VisualRust.CargoBuild.csproj
VisualRust.CargoBuild/Properties/: AssemblyInfo.cs
VisualRust.Project/: CargoUtil.cs  DefaultRustLauncher.cs  ProjectUtil.cs  ProjectWorkPool.cs  RustProjectFactory.cs  RustProjectNode.cs  TaskMessages.cs  VisualRust.Project.csproj
VisualRust.Project/Forms/: ApplicationPropertyControl.cs
VisualRust.Setup/: VisualRust.Setup.wixproj  VisualRust.wxs  templates2013.wxs
VisualRust.Shared/: BuildOutputType.cs  Cargo.cs  CommonUtil.cs  Duration.cs  Environment.cs  RustcOutputProcessor.cs  RustcParsedMessage.cs  RwLock.cs  VisualRust.Shared.csproj  WorkerPool.cs
VisualRust.Templates/: VisualRust.Templates.csproj
VisualRust.Templates/Projects/Application/: ApplicationProject.vstemplate
VisualRust.Templates/Projects/CargoApplication/: Cargo.toml  CargoApplicationProject.rsproj  CargoApplicationProject.vstemplate
VisualRust.Templates/Projects/CargoLibrary/: Cargo3.toml  CargoLibraryProject.rsproj  CargoLibraryProject.vstemplate
VisualRust.Test/: VisualRust.Test.csproj
VisualRust/Racer/: AutoCompleter.cs
